startdev/src/Hero/Hero.css
:root {
    --hero-bg-color: rgb(160, 164, 184, 0.7); 
    --main-vert: 2.5rem;
    --heroHeading-font: "Times New Roman";
    --heroHeading-fontSize: 1.5rem;
    --heroHeading-fontColor: black;
    --blurb-font: "Open Sans", sans-serif;
    --blurb-fontSize: 0.5rem;
    --blurb-fontColor: black;
    --hero-btn1-color: rgb(160, 164, 184, 1);
    --hero-btn2-color: rgb(211, 215, 238); 
    --hero-btnHover-color: black;
}

*, *::before, *::after {
    box-sizing: border-box;
    width: 100%;
}

.hero {
    position: relative;
    height: 35vh;
    width: 100%;
    margin: 0;
    display: flex;
    /* align-items: center; */
    justify-content: center;
    background-image: url('../assets/ricardo-gomez-angel.jpg');
    background-size: cover;
    background-position: center;
    color: white;
    text-align: center;
    /* padding: 20px 0px; */
    overflow: hidden;
}

.hero > div {
    display: flex;
    background-color: var(--hero-bg-color);
}

.heroComponents{
    /* background-color: var(--hero-bg-color); */
    height: 35vh;
    width: 100%;
    letter-spacing: 0.1rem;

    display: flex;
    flex-direction: column;
    /* margin: 10px 0; */
    float: left;
    /* align-items: center; */
    justify-content: center;
    position: relative;
    text-align: left;
    padding: 2rem 0;
}

.heroHeading {
    font-family: var(--heroHeading-font);
    font-size: var(--heroHeading-fontSize);
    color: var(--heroHeading-fontColor);
    width: 80%;
    margin: 15px;
    text-align: left;
}

.heroBlurb {
    font-family: var(--blurb-font);
    font-size: var(--blurb-fontSize);
    color: var(--blurb-fontColor);
    width: 80%;
    margin: 15px;
    text-align: left;
}

.heroButton-container {
    width: 80%;
    margin: 15px;
    /* margin: 20px 50px; */

    display: flex;
    text-align: center;
}

.heroButton-wrap {
    margin: 0 2px 0 0;
    text-align: center;
    width: auto;
}

.heroButton-1, .heroButton-2 {
    font-size: 0.8rem;
    width: 8rem;
    padding: 0.6rem 1.2rem;
    border-radius: 4px;
    transition: font-weight 0.5s ease;
    transition: background-color 0.8s ease;
    text-decoration: none;
    text-align: center;
    /* margin: 0 10px 0 0px; */
}

.heroButton-1 {
    background-color: var(--hero-btn1-color);
    color: white;
}

.heroButton-2 {
    background-color: var(--hero-btn2-color);
    color: black;
}

.heroButton-1:hover, .heroButton-2:hover {
  font-weight: bold;
  background-color: var(--hero-btnHover-color);
  color: white;
}



.holdsAllCards {

}


/*---------- Tablet ----------*/
@media (min-width: 768px) {

.heroHeading {
    font-size: 2.5rem;
}

.heroBlurb {
    font-size: 1.2rem;
}


  
  }

/*---------- Smaller Screen ----------*/
@media (min-width: 888px) {

.hero, .heroComponents{
    height: 45vh;
}

.heroHeading {
    font-size: 3.2rem;
}

.heroBlurb {
    font-size: 1.5rem;
}

.heroButton-wrap {
    margin: 0 5px 0 0;
    text-align: center;
    width: auto;
}
  
  }

/*---------- XXL ----------*/
@media (min-width: 1440px) {



}

